# ros2_llm_if

./: main.py  offline_chat.py
llm_if_demos/: package.xml  setup.cfg  setup.py
llm_if_demos/llm_if_demos/: chatbot.py  turtlebot_llm_controller.py
llm_if_demos/share/llm_if_demos/: teleport_absolute.json  teleport_relative.json
llm_if_idl/: CMakeLists.txt  README.md  package.xml
llm_if_idl/action/: ChatCompletion.action
llm_if_idl/msg/: ChatMessage.msg
llm_if_server/: CMakeLists.txt  package.xml
llm_if_server/config/: cortex.yaml
llm_if_server/include/llm_if_server/: cortex_chat_completion_node.hpp  curl_manager.hpp
llm_if_server/src/: cortex_chat_completion_component.cpp  cortex_chat_completion_node.cpp  curl_manager.cpp
prompt/: __init__.py  cortex_interface.py
